--- a/NHH_netflix/src/index.html
+++ b/NHH_netflix/src/index.html
@@ -14,9 +14,9 @@
   <!-- font chữ gg -->
 
 </head>
-
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+<script src="https://kit.fontawesome.com/bb555fa7e1.js" crossorigin="anonymous"></script>
 
 </html>
