feat: open volume banner video

--- a/NHH_netflix/src/index.html
+++ b/NHH_netflix/src/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <script src="https://www.youtube.com/iframe_api"></script>
+
   <!-- font chữ gg -->
 
 </head>
